--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -26,8 +26,8 @@
     transition: translate 400ms ease-in-out;
   }
 
-  #prevBtn,
-  #nextBtn {
+  .prevBtn,
+  .nextBtn {
     display: grid;
     place-items: center;
     background-color: white;
@@ -62,10 +62,10 @@
   border-radius: 8px;
 }
 
-#prevBtn {
+.prevBtn {
   left: 4%;
 }
 
-#nextBtn {
+.nextBtn {
   right: 4%;
 }
