--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -23,6 +23,14 @@
   }
 }
 
+.companyName{
+  font-size: 11px;
+  text-transform: uppercase;
+  color: $Orange;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+
 .priceContainer {
   display: flex;
   justify-content: space-between;
